Fix CSV parsing, add item count & last updated, attempt camera zoom

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </nav>
     <section>
       <button id="refresh-btn">Refresh Database</button>
+      <!-- We'll add these two paragraphs to show loading and final status -->
+      <p id="loading-message" style="color: green; font-weight: bold;"></p>
       <p id="status-message"></p>
     </section>
   </main>
