Switch to Quagga2 for improved barcode scanning, remove camera selection

--- a/pricelist-a.html
+++ b/pricelist-a.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <title>Pricelist KM - Toto Bazaar 2024</title>
+  <title>KM Toto Bazaar 25</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
     <!-- Title + refresh button on the right side -->
     <h1>
-      Pricelist KM - Toto Bazaar 2024
+      KM Toto Bazaar 25
       <button id="refresh-btn" style="float: right;">Refresh Database</button>
     </h1>
   </header>
