Switch to Quagga2 for improved barcode scanning, remove camera selection

--- a/pricelist-a.html
+++ b/pricelist-a.html
@@ -10,7 +10,7 @@
   <header>
     <!-- Title + refresh button on the right side -->
     <h1>
-      KM Toto Bazaar 25
+      KM Toto Bazaar 25v1
       <button id="refresh-btn" style="float: right;">Refresh Database</button>
     </h1>
   </header>
