--- a/pricelist-a.html
+++ b/pricelist-a.html
@@ -4,46 +4,46 @@
   <meta charset="UTF-8" />
   <!-- Ensure proper scaling on mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <title>KM TOTO</title>
+  <title>KM Toto 25v3</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
-    <!-- Title with Refresh button on the right -->
+    <!-- Page title with Refresh Database button on the right -->
     <h1>
-      KM Toto 25v2
+      KM Toto 25v3
       <button id="refresh-btn" style="float: right;">Refresh Database</button>
     </h1>
   </header>
   <main>
-    <!-- Status messages and data info -->
+    <!-- Status messages and data information -->
     <p id="status-message" style="color: green; font-weight: bold;"></p>
     <p id="data-info" style="font-weight: bold; color: #333;"></p>
     
-    <!-- Search bar and Scan Barcode button -->
+    <!-- Search input and Scan Barcode button -->
     <div class="search-container">
       <input type="text" id="search-input" placeholder="Search by code, barcode, or name..." />
       <button id="barcode-btn">Scan Barcode</button>
     </div>
     
-    <!-- Search results area -->
+    <!-- Results will be displayed here -->
     <div id="results"></div>
   </main>
   
-  <!-- Modal for barcode scanning -->
+  <!-- Full-screen Modal for Barcode Scanning -->
   <div id="scanner-modal" class="modal">
     <div class="modal-content">
       <span id="close-modal" class="close">&times;</span>
-      <!-- The camera feed will be rendered here -->
+      <!-- The camera feed will be rendered here by Quagga2 -->
       <div id="scanner-container"></div>
     </div>
   </div>
   
-  <!-- Load external libraries -->
+  <!-- External libraries -->
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <script src="https://unpkg.com/@ericblade/quagga2/dist/quagga.js"></script>
   
-  <!-- Pricelist logic -->
+  <!-- Pricelist page logic -->
   <script src="js/pricelist.js"></script>
 </body>
 </html>
