KM TOTO 25v5 - Cropped to center area, full-width modal, camera off on load until scan click

--- a/pricelist-a.html
+++ b/pricelist-a.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <!-- Ensure proper scaling on mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <title>KM Toto 25v4</title>
+  <title>KM TOTO 25v5</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
     <!-- Page title with Refresh Database button on the right -->
     <h1>
-      KM Toto 25v4
+      KM TOTO 25v5
       <button id="refresh-btn" style="float: right;">Refresh Database</button>
     </h1>
   </header>
@@ -30,7 +30,7 @@
     <div id="results"></div>
   </main>
   
-  <!-- Full-screen Modal for Barcode Scanning -->
+  <!-- Full-screen Modal for Barcode Scanning (initially hidden) -->
   <div id="scanner-modal" class="modal">
     <div class="modal-content">
       <span id="close-modal" class="close">&times;</span>
