--- a/pricelist-a.html
+++ b/pricelist-a.html
@@ -16,7 +16,7 @@
     </h1>
   </header>
   <main>
-    <!-- Status messages and data information -->
+    <!-- Status messages and data info -->
     <p id="status-message" style="color: green; font-weight: bold;"></p>
     <p id="data-info" style="font-weight: bold; color: #333;"></p>
     
@@ -30,12 +30,20 @@
     <div id="results"></div>
   </main>
   
-  <!-- Full-screen Modal for Barcode Scanning (initially hidden) -->
+  <!-- Scanner Modal (hidden until Scan Barcode is clicked) -->
   <div id="scanner-modal" class="modal">
     <div class="modal-content">
       <span id="close-modal" class="close">&times;</span>
-      <!-- The camera feed will be rendered here by Quagga2 -->
+      <!-- Quagga2 will render the camera feed here -->
       <div id="scanner-container"></div>
+    </div>
+  </div>
+  
+  <!-- Detail Modal for search result pop-up -->
+  <div id="detail-modal" class="modal">
+    <div class="modal-content detail-content">
+      <span id="close-detail-modal" class="close">&times;</span>
+      <div id="detail-container"></div>
     </div>
   </div>
   
