KM TOTO 25v5 - Prevent auto camera start; add detail pop-up on search result click

--- a/pricelist-a.html
+++ b/pricelist-a.html
@@ -16,7 +16,7 @@
     </h1>
   </header>
   <main>
-    <!-- Status messages and data info -->
+    <!-- Status messages and data information -->
     <p id="status-message" style="color: green; font-weight: bold;"></p>
     <p id="data-info" style="font-weight: bold; color: #333;"></p>
     
