Homeland Toto V8 - Revert most changes; update title and header info

--- a/pricelist-a.html
+++ b/pricelist-a.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <!-- Ensure proper scaling on mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <title>Homeland Toto v7</title>
+  <title>Homeland Toto V8</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
@@ -13,16 +13,15 @@
       <span id="data-info">Items: 0. Updated: --</span>
       <button id="refresh-btn">Refresh DB</button>
     </div>
-    <h1>Homeland Toto v7</h1>
+    <h1>Homeland Toto V8</h1>
   </header>
   <main>
     <!-- Status message -->
     <p id="status-message" style="color: green; font-weight: bold;"></p>
     
-    <!-- Search container with clear button -->
+    <!-- Search container -->
     <div class="search-container">
       <input type="text" id="search-input" placeholder="Search by code, barcode, or name..." />
-      <button id="clear-search" title="Clear search">x</button>
       <button id="barcode-btn">Scan Barcode</button>
     </div>
     
