--- a/pricelist-a.html
+++ b/pricelist-a.html
@@ -4,33 +4,34 @@
   <meta charset="UTF-8" />
   <!-- Ensure proper scaling on mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <title>Homeland Toto V8</title>
+  <title>Homeland Toto v0.29</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
-    <div class="header-top">
-      <span id="data-info">Items: 0. Updated: --</span>
-      <button id="refresh-btn">Refresh DB</button>
-    </div>
-    <h1>Homeland Toto V8</h1>
+    <!-- Page title with Refresh Database button on the right -->
+    <h1>
+      Homeland Toto v0.29
+      <button id="refresh-btn" style="float: right;">Refresh DB</button>
+    </h1>
   </header>
   <main>
-    <!-- Status message -->
+    <!-- Status messages and data info -->
     <p id="status-message" style="color: green; font-weight: bold;"></p>
+    <p id="data-info" style="font-weight: bold; color: #333;"></p>
     
-    <!-- Search container -->
+    <!-- Search input and Scan Barcode button -->
     <div class="search-container">
       <input type="text" id="search-input" placeholder="Search by code, barcode, or name..." />
       <button id="barcode-btn">Scan Barcode</button>
     </div>
     
-    <!-- Results area -->
+    <!-- Results will be displayed here -->
     <div id="results"></div>
   </main>
   
   <!-- Scanner Modal (hidden until Scan Barcode is clicked) -->
-  <div id="scanner-modal" class="modal">
+  <div id="scanner-modal" class="modal" style="display: none;">
     <div class="modal-content">
       <span id="close-modal" class="close">&times;</span>
       <!-- Quagga2 will render the camera feed here -->
@@ -39,7 +40,7 @@
   </div>
   
   <!-- Detail Modal for search result pop-up -->
-  <div id="detail-modal" class="modal">
+  <div id="detail-modal" class="modal" style="display: none;">
     <div class="modal-content detail-content">
       <span id="close-detail-modal" class="close">&times;</span>
       <div id="detail-container"></div>
