--- a/pricelist-a.html
+++ b/pricelist-a.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <!-- Ensure proper scaling on mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <title>Homeland Toto v0.29</title>
+  <title>KM Toto v09</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
     <!-- Page title with Refresh Database button on the right -->
     <h1>
-      Homeland Toto v0.29
+      KM Toto v09
       <button id="refresh-btn" style="float: right;">Refresh DB</button>
     </h1>
   </header>
