--- a/pricelist-a.html
+++ b/pricelist-a.html
@@ -4,43 +4,42 @@
   <meta charset="UTF-8" />
   <!-- Ensure proper scaling on mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <title>KM Toto v09</title>
+  <title>Homeland Toto V8</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
-    <!-- Page title with Refresh Database button on the right -->
-    <h1>
-      KM Toto v09
-      <button id="refresh-btn" style="float: right;">Refresh DB</button>
-    </h1>
+    <div class="header-top">
+      <span id="data-info">Items: 0. Updated: --</span>
+      <button id="refresh-btn">Refresh DB</button>
+    </div>
+    <h1>Homeland Toto V8</h1>
   </header>
   <main>
-    <!-- Status messages and data info -->
+    <!-- Status message -->
     <p id="status-message" style="color: green; font-weight: bold;"></p>
-    <p id="data-info" style="font-weight: bold; color: #333;"></p>
     
-    <!-- Search input and Scan Barcode button -->
+    <!-- Search container -->
     <div class="search-container">
       <input type="text" id="search-input" placeholder="Search by code, barcode, or name..." />
       <button id="barcode-btn">Scan Barcode</button>
     </div>
     
-    <!-- Results will be displayed here -->
+    <!-- Results area -->
     <div id="results"></div>
   </main>
   
   <!-- Scanner Modal (hidden until Scan Barcode is clicked) -->
-  <div id="scanner-modal" class="modal" style="display: none;">
+  <div id="scanner-modal" class="modal">
     <div class="modal-content">
       <span id="close-modal" class="close">&times;</span>
-      <!-- Quagga2 will render the camera feed here -->
-      <div id="scanner-container"></div>
+      <!-- ZXing will render the video feed here -->
+      <video id="scanner-video" style="width:100%; height:100%;"></video>
     </div>
   </div>
   
   <!-- Detail Modal for search result pop-up -->
-  <div id="detail-modal" class="modal" style="display: none;">
+  <div id="detail-modal" class="modal">
     <div class="modal-content detail-content">
       <span id="close-detail-modal" class="close">&times;</span>
       <div id="detail-container"></div>
@@ -49,7 +48,7 @@
   
   <!-- External libraries -->
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
-  <script src="https://unpkg.com/@ericblade/quagga2/dist/quagga.js"></script>
+  <script src="https://unpkg.com/@zxing/library@latest"></script>
   
   <!-- Pricelist page logic -->
   <script src="js/pricelist.js"></script>
