Homeland Toto V8 - Switch from Quagga to ZXing for barcode scanning

--- a/pricelist-a.html
+++ b/pricelist-a.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <!-- Ensure proper scaling on mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <title>Homeland Toto V8</title>
+  <title>KM Toto v10</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
@@ -13,7 +13,7 @@
       <span id="data-info">Items: 0. Updated: --</span>
       <button id="refresh-btn">Refresh DB</button>
     </div>
-    <h1>Homeland Toto V8</h1>
+    <h1>KM Toto v10</h1>
   </header>
   <main>
     <!-- Status message -->
